# removebg

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.ko.md  README.md  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
packaging/homebrew/: README.md  collect_resources.py  generate-resources.sh
packaging/homebrew/Formula/: removebg.rb
src/nobg/: __init__.py  cli.py  core.py
tests/: test_cli.py
