[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nobg"
dynamic = ["version"]
description = "A simple CLI tool that removes backgrounds from images using rembg (U^2-Net)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Soohan Park" }]
keywords = ["background-removal", "rembg", "image-processing", "u2net", "birefnet", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "click>=8.1",
    "rembg>=2.0.50",
    "Pillow>=10.0",
    "onnxruntime>=1.16",
]

[project.urls]
Homepage = "https://github.com/soohanpark/nobg"
Repository = "https://github.com/soohanpark/nobg"
Issues = "https://github.com/soohanpark/nobg/issues"

[project.optional-dependencies]
gpu = ["onnxruntime-gpu>=1.16"]
dev = ["pytest>=7"]

[project.scripts]
nobg = "nobg.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools_scm]
# Version is derived from the git tag (e.g. v0.2.0 -> 0.2.0). Builds from a
# non-tagged commit get a PEP 440 dev version like 0.2.1.dev3+g<sha>.
fallback_version = "0.0.0+unknown"
